# soul-shield/rest/handlers/user/dto.go
@@ -1,9 +1,9 @@
 package user
 
 type RegisterRequest struct {
-	Name     string `json:"name"`
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Full_Name string `json:"full_name"`
+	Email     string `json:"email"`
+	Password  string `json:"password"`
 }
 
 type LoginRequest struct {
